feat: add csv-parse endpoint

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/apidk/rest-api#readme",
   "dependencies": {
+    "csv-parse": "^6.1.0",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
