--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [22.x]
 
     steps:
       - name: Checkout code
@@ -31,11 +31,3 @@ jobs:
         run: npm test
         env:
           NODE_ENV: test
-
-      - name: Upload test coverage
-        if: matrix.node-version == '20.x'
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: coverage/
-          retention-days: 7
