--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "NODE_ENV=development node index.js",
     "test": "NODE_ENV=test jest --forceExit",
-    "test:coverage": "NODE_ENV=test jest --coverage --forceExit",
     "migrate": "node src/db/migrate.js",
     "seed": "node src/db/seed.js",
     "format": "prettier --write \"**/*.{js,json,md}\"",
@@ -25,8 +23,10 @@
   },
   "homepage": "https://github.com/apidk/rest-api#readme",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "csv-parse": "^6.1.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
