fix: run tests sequentially

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "NODE_ENV=test jest --forceExit",
+    "test": "NODE_ENV=test jest --runInBand --forceExit",
     "migrate": "node src/db/migrate.js",
     "seed": "node src/db/seed.js",
     "format": "prettier --write \"**/*.{js,json,md}\"",
